# ChangeLog for www-plugins/adobe-flash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.43 2010/08/12 12:36:51 lack Exp $

*adobe-flash-10.1.82.76-r1 (12 Aug 2010)

  12 Aug 2010; Jim Ramsay <lack@gentoo.org> +adobe-flash-10.1.82.76-r1.ebuild,
  metadata.xml:
  Bring back nspluginwrapper for amd64, with warnings and a USE flag.

  12 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  adobe-flash-9.0.208.0.ebuild, adobe-flash-10.1.82.76.ebuild:
  x86 stable wrt security bug #332205

  11 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  adobe-flash-9.0.208.0.ebuild, adobe-flash-10.1.82.76.ebuild:
  Stable on amd64. Security bug #332205

*adobe-flash-10.1.82.76 (11 Aug 2010)
*adobe-flash-9.0.208.0 (11 Aug 2010)

  11 Aug 2010; Jim Ramsay <lack@gentoo.org> +adobe-flash-9.0.208.0.ebuild,
  -adobe-flash-9.0.277.0.ebuild, -adobe-flash-9.0.277.0-r1.ebuild,
  -adobe-flash-10.0.45.2.ebuild, -adobe-flash-10.0.45.2-r1.ebuild,
  +adobe-flash-10.1.82.76.ebuild:
  Version/security bump: Adobe flash 10.1.82.76 and 9.0.208.0 is released,
  bug #332205.

  26 Jul 2010; Pacho Ramos <pacho@gentoo.org>
  adobe-flash-10.1.53.64-r1.ebuild:
  amd64 stable, bug 329913

  26 Jul 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  adobe-flash-10.1.53.64-r1.ebuild:
  x86 stable wrt bug #329913

  25 Jul 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  adobe-flash-9.0.277.0.ebuild, adobe-flash-9.0.277.0-r1.ebuild:
  Fix references for pkgmove from www-client/mozilla-firefox ->
  www-client/firefox

*adobe-flash-10.1.53.64-r1 (20 Jul 2010)
*adobe-flash-10.0.45.2-r2 (20 Jul 2010)
*adobe-flash-9.0.277.0-r1 (20 Jul 2010)

  20 Jul 2010; Jim Ramsay <lack@gentoo.org>
  +adobe-flash-9.0.277.0-r1.ebuild, +adobe-flash-10.0.45.2-r2.ebuild,
  +adobe-flash-10.1.53.64-r1.ebuild:
  Move plugin install path to /opt/Adobe/flash-plugin (Bug #328639)

  11 Jul 2010; Fabio Erculiani <lxnay@gentoo.org>