@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.43 2010/08/12 12:36:51 lack Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.44 2010/08/12 12:40:03 lack Exp $
+
+  12 Aug 2010; Jim Ramsay <lack@gentoo.org> -adobe-flash-10.1.53.64.ebuild,
+  -adobe-flash-10.1.53.64-r1.ebuild:
+  Version cleanup
 
 *adobe-flash-10.1.82.76-r1 (12 Aug 2010)
 
